# weiqi-tournament-pairing

./: .gitignore  MAINTENANCE.md  PROJECT_CONTEXT.md  README.md  pyproject.toml  run-demo.bat  run_local.bat
docs/: architecture.md  csv-format.md  opengotha-comparison.md  roadmap.md  tournament-file-format.md  tournament-trial-runbook.md
docs/superpowers/plans/: 2026-06-22-stage-1-foundation.md  2026-06-23-stage-2-swiss.md  2026-06-24-repository-rehabilitation.md  2026-06-24-stage-3-mcmahon.md  2026-06-25-stage-5-tournament-trials.md  2026-06-25-stage-6-director-workflow.md  2026-07-01-local-launcher-audit-integrity.md  2026-07-14-windows-demo-launcher.md
docs/superpowers/specs/: 2026-06-22-weiqi-tournament-design.md  2026-06-23-stage-2-swiss-design.md  2026-06-24-codebase-stabilization-design.md  2026-06-24-repository-rehabilitation-design.md  2026-06-24-stage-3-mcmahon-design.md  2026-06-25-stage-6-director-workflow-design.md  2026-07-01-local-launcher-audit-integrity-design.md  2026-07-14-windows-demo-launcher-design.md
scripts/: run-demo.ps1
src/pairing/: __init__.py
src/pairing/application/: __init__.py  results.py  (+2 more)
tests/: conftest.py
tests/integration/: test_live_server.py  test_tournament_trials.py  test_tournament_workflows.py
tests/property/: test_pairing_invariants.py
tests/unit/: test_application_service.py  test_audit_integrity.py  test_cli.py  test_csv_import.py  test_domain_serialization.py  test_domain_validation.py  test_json_store.py  test_mcmahon_config.py  test_mcmahon_pairing.py  test_participation.py  test_rank_parser.py  test_result_outcomes.py  test_round_models.py  test_run_local.py  test_standings.py  test_swiss_pairing.py  test_web_app.py  test_web_routing.py  test_windows_launcher.py
(+37 files in other folders)
