[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "weiqi-tournament-pairing"
version = "0.1.0"
description = "Open-source Weiqi/Go tournament pairing software."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "ChrisCai03" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "hypothesis>=6.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.scripts]
pairing = "pairing.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q -p no:cacheprovider"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
files = ["src/pairing"]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
disable_error_code = ["arg-type", "call-overload", "attr-defined"]
